fixed overlap classes on css

--- a/client/src/assets/css/sets.css
+++ b/client/src/assets/css/sets.css
@@ -28,7 +28,7 @@
     align-items: center;
 }
 
-.row .red.lighten-2{
+.delete-button{
   
     height: 4rem;
     padding: 0 20px;
